project name fix.

--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="springio">
+    <wb-module deploy-name="J2EE-Starter-Pack">
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/config-dev"/>
-        <property name="java-output-path" value="/springio/target/classes"/>
-        <property name="context-root" value="samplespring"/>
+        <property name="java-output-path" value="/J2EE-Starter-Pack/target/classes"/>
+        <property name="context-root" value="J2EEStarterPack"/>
     </wb-module>
 </project-modules>
